// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TristateCheckBox renders checked="indeterminate" 1`] = `
<span
  className="TristateCheckBox TristateCheckBox_checked_indeterminate"
  data-lego="react"
>
  <CheckBox
    checked={true}
    size="s"
    theme="normal"
  >
    checked="indeterminate"
  </CheckBox>
</span>
`;

exports[`TristateCheckBox renders checked="no" 1`] = `
<span
  className="TristateCheckBox TristateCheckBox_checked_no"
  data-lego="react"
>
  <CheckBox
    checked={false}
    size="s"
    theme="normal"
  >
    checked="no"
  </CheckBox>
</span>
`;

exports[`TristateCheckBox renders checked="yes" 1`] = `
<span
  className="TristateCheckBox TristateCheckBox_checked_yes"
  data-lego="react"
>
  <CheckBox
    checked={true}
    size="s"
    theme="normal"
  >
    checked="yes"
  </CheckBox>
</span>
`;
